--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.20",
     "@react-spring/web": "^9.7.3",
+    "and": "^0.0.3",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "react": "^18.3.1",
